added PathTest and converted lots of list and set creations to List.of and Set.of